[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/SIsilicon.vfx.lens flare/lens-flare.gd" type="Script" id=1]
[ext_resource path="res://addons/SIsilicon.vfx.lens flare/lens_flare_icon.png" type="Texture" id=2]
[ext_resource path="res://CamControl.gd" type="Script" id=3]
[ext_resource path="res://FlareEditor.gd" type="Script" id=4]
[ext_resource path="res://Slider.tscn" type="PackedScene" id=5]
[ext_resource path="res://Square.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=2]
resource_name = "instruction"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 4 ),
"update": 0,
"values": [ Vector2( 0, 578 ), Vector2( 0, 578 ), Vector2( 0, 700 ) ]
}

[sub_resource type="ProceduralSky" id=3]
ground_energy = 0.5
sun_angle_max = 24.52
sun_energy = 16.0

[sub_resource type="Environment" id=4]
background_mode = 2
background_sky = SubResource( 3 )
tonemap_mode = 1
auto_exposure_enabled = true
adjustment_brightness = 0.67
adjustment_contrast = 1.91

[node name="Main" type="Node"]

[node name="LensFlare" type="Node" parent="."]
script = ExtResource( 1 )
__meta__ = {
"_editor_icon": ExtResource( 2 )
}
flareStrength = 0.41
flareBias = 3.644
distortionQuality = 1
distortion = 4.28
ghostSpacing = 0.307
haloWidth = 0.253

[node name="CameraBase" type="Position3D" parent="."]

[node name="Camera" type="Camera" parent="CameraBase"]
transform = Transform( 0.990683, 0.0787858, 0.111085, -0.00953811, 0.853812, -0.520493, -0.135853, 0.514584, 0.846609, 0.140886, -0.660126, 1.07524 )
script = ExtResource( 3 )
camera_speed = 2.17

[node name="Panel" type="Panel" parent="."]
editor/display_folded = true
anchor_bottom = 1.0
margin_right = 299.0
margin_bottom = -423.0
rect_min_size = Vector2( 240, 0 )
script = ExtResource( 4 )

[node name="Settings" type="VBoxContainer" parent="Panel"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 7.0
margin_right = -10.0
margin_bottom = -10.0
rect_min_size = Vector2( 200, 0 )

[node name="FlareStrength" parent="Panel/Settings" instance=ExtResource( 5 )]
margin_right = 279.0
text = "Flare Strength"
max_value = 3.0
value = 1.0

[node name="FlareBias" parent="Panel/Settings" instance=ExtResource( 5 )]
margin_top = 20.0
margin_right = 279.0
margin_bottom = 36.0
text = "Flare Bias"
max_value = 20.0
value = 8.0

[node name="FlareBlur" parent="Panel/Settings" instance=ExtResource( 5 )]
margin_top = 40.0
margin_right = 279.0
margin_bottom = 56.0
text = "Flare Blur"
max_value = 8.0
value = 1.0

[node name="Distortion" parent="Panel/Settings" instance=ExtResource( 5 )]
margin_top = 60.0
margin_right = 279.0
margin_bottom = 76.0
text = "Distortion"
max_value = 50.0
value = 10.0

[node name="DistortQuality" type="HBoxContainer" parent="Panel/Settings"]
editor/display_folded = true
margin_top = 80.0
margin_right = 279.0
margin_bottom = 100.0

[node name="Label" type="Label" parent="Panel/Settings/DistortQuality"]
margin_top = 3.0
margin_right = 122.0
margin_bottom = 17.0
text = "Distortion Quality: "

[node name="OptionButton" type="OptionButton" parent="Panel/Settings/DistortQuality"]
margin_left = 126.0
margin_right = 279.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Low"
items = [ "Low", null, false, 0, null, "Medium", null, false, 1, null, "High", null, false, 2, null ]
selected = 0

[node name="GhostCount" parent="Panel/Settings" instance=ExtResource( 5 )]
margin_top = 104.0
margin_right = 279.0
margin_bottom = 120.0
text = "Ghost Count"
max_value = 20.0
value = 7.0

[node name="GhostSpacing" parent="Panel/Settings" instance=ExtResource( 5 )]
margin_top = 124.0
margin_right = 279.0
margin_bottom = 140.0
text = "Ghost Spacing"
value = 0.3

[node name="HaloWidth" parent="Panel/Settings" instance=ExtResource( 5 )]
margin_top = 144.0
margin_right = 279.0
margin_bottom = 160.0
text = "Halo Width"
value = 0.54

[node name="LookAround" type="Label" parent="."]
editor/display_folded = true
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 51.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "You may look around with the WASD keys"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="LookAround"]
autoplay = "instruction"
anims/instruction = SubResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 4 )
[connection signal="value_changed" from="Panel/Settings/FlareStrength" to="Panel" method="_on_FlareStrength_value_changed"]
[connection signal="value_changed" from="Panel/Settings/FlareBias" to="Panel" method="_on_FlareBias_value_changed"]
[connection signal="value_changed" from="Panel/Settings/FlareBlur" to="Panel" method="_on_FlareBlur_value_changed"]
[connection signal="value_changed" from="Panel/Settings/Distortion" to="Panel" method="_on_Distortion_value_changed"]
[connection signal="item_selected" from="Panel/Settings/DistortQuality/OptionButton" to="Panel" method="_on_DistortQuality_item_selected"]
[connection signal="value_changed" from="Panel/Settings/GhostCount" to="Panel" method="_on_GhostCount_value_changed"]
[connection signal="value_changed" from="Panel/Settings/GhostSpacing" to="Panel" method="_on_GhostSpacing_value_changed"]
[connection signal="value_changed" from="Panel/Settings/HaloWidth" to="Panel" method="_on_HaloWidth_value_changed"]
